# error500mil

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml
algo-agent/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  config.py  docker-compose.dev.yml  requirements.txt
algo-agent/app/: __init__.py  routes.py  settings.py
algo-agent/app/fet/: __init__.py  results_parser.py  router.py  (+3 more)
algo-agent/fet-7.5.5/: .gitignore
backend/: Autorizacion.md
backend/fastapi/: .gitignore  Dockerfile.dev  Dockerfile.test  Makefile.tests  config.py  main.py  requirements.txt  start.sh
deploy/kubernetes/: agent-deployment.yml  agent-service.yml  backend-deployment.yml  backend-service.yaml  frontend-deployment.yml  frontend-service.yaml  ingress.yml  postgres.yml  rooms-scheduler-deployment.yml  rooms-scheduler-service.yml
docs/security/: incident-response.md  mitigation-controls.md  security-checklist.md  threat-analysis.md  threat-diagrams.md
mobile/: Dockerfile  Dockerfile.dev  EVENTOS_ACTUALIZACION.md  EVENTOS_RESUMEN.md  QUICK_START_EVENTOS.md  index.html  package.json  tsconfig.app.json  vite.config.ts
mobile/public/: manifest.json
mobile/src/: App.tsx  index.css  main.tsx
rooms-scheduler/: Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
rooms-scheduler/src/: config.rs  jwt.rs  main.rs  middlewares.rs  models.rs  router.rs
rooms-scheduler/src/controllers/: mod.rs  rooms_scheduler.rs
rooms-scheduler/src/scheduler/: algorithm.rs
(+207 files in other folders)
