[package]
name = "rooms-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum_responses = "0.4.6"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
